# normalize

./: .gitignore  CMakeLists.txt  pro-12.cpp  pro-13.cpp  test.cpp
